<resources>
    <string name="app_name">Akara Podcast</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="community">Community</string>
    <string name="playlist">Playlist</string>
    <string name="favorite">Favorite</string>
    <string name="discover">Discover</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_release_from">New release from</string>
    <string name="kryptonite">Kryptonite</string>
    <string name="u_re_beaufiful">You\'re beautiful and don\'t forget it!</string>
    <string name="motivation_kryptonite">Motivation • Kryptonite</string>
    <string name="popular_now">Popular Podcast</string>
    <string name="tech_talk">Tech Talk</string>
    <string name="just_talk">Just Talk</string>
    <string name="talk_it_out">Talk it Out!!</string>
    <string name="technologies_is_not_about_money">Technologies is not about money</string>
    <string name="news_talk">News Talk</string>
    <string name="nickels_and_crime">Nickels and Crime</string>
    <string name="technology">Technology</string>
    <string name="comedy">Comedy</string>
    <string name="top_podcaster">Top Podcaster</string>
    <string name="nikels">NIKELS</string>
    <string name="akara_podcast">Akara Podcast</string>
    <string name="Liked" />
    <string name="Playlist">Playlist</string>
    <string name="up_2_day_ago">up 2 day ago</string>
    <string name="new_episodes">new_episodes</string>
    <string name="recent">recent</string>
    <string name="all">all</string>
    <string name="artists">artists</string>
    <string name="albums">albums</string>
    <string name="podcasts">podcasts</string>
    <string name="your_library">Your library</string>
    <string name="pf">pf</string>
    <string name="back">back</string>
    <string name="playing_from_podcast">PLAYING FROM PODCAST</string>
    <string name="more">more</string>
    <string name="_0_00">0:00</string>
    <string name="_1_10_00">1:10:00</string>
    <string name="New_Episodes">New Episodes</string>
    <string name="resents">Recents</string>
    <string name="liked">Liked</string>
    <string name="Give_your_playlist_name">Give your playlist name\n</string>
    <string name="my_playlist">My Playlist</string>
    <string name="Search">Search</string>
    <string name="i_m_sorry_to_hear_that_you_ve_been_unwell_please_take_all_the_time_you_need_to_rest_and_recover_your_health_is_the_most_important_thing_i_hope_you_re_feeling_better_soon_n_nthank_you_for_your_understanding_during_the_holiday_season_i_m_ready_to_get_back_to_work_on_our_projects_as_soon_as_you_are_in_the_meantime_please_let_me_know_if_there_s_anything_i_can_do_to_help_or_prepare_n_nwishing_you_a_speedy_recovery_and_a_happy_holiday_season_n_nbest_regards">I\'m sorry to hear that you\'ve been unwell. Please take all the time you need to rest and recover – your health is the most important thing. I hope you\'re feeling better soon. \n\nThank you for your understanding during the holiday season. I\'m ready to get back to work on our projects as soon as you are. In the meantime, please let me know if there\'s anything I can do to help or prepare.Wishing you a speedy recovery and a happy holiday season. Best regards</string>
    <string name="dec_25_24_mins">Dec 25 • 24 mins</string>
</resources>