<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="32dp"
    android:orientation="vertical">

    <!--     From       -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="200dp"
            tools:ignore="VisualLintBounds"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/podcasterImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@mipmap/ic_founder" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            tools:ignore="RtlSymmetry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_release_from"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/podcasterName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                tools:text="@string/kryptonite"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!--     Podcast      -->
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        tools:ignore="VisualLintBounds"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/podcastImg"
                android:layout_width="168dp"
                android:layout_height="match_parent"
                tools:src="@mipmap/ic_ubeutiful_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title"
                    tools:ignore="HardcodedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/u_re_beaufiful"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/motivation_kryptonite"
                    android:textColor="@color/text_secondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_notfav_foreground" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_play_foreground" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>