<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:id="@+id/podcastImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/pf"
            tools:src="@mipmap/ic_founder" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <!--  Title  -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="@string/u_re_beaufiful" />

    <!--  Podcaster  -->
    <LinearLayout
        android:id="@+id/podcasterLl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.cardview.widget.CardView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp"
            tools:ignore="VisualLintBounds">

            <ImageView
                android:id="@+id/podcasterImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/pf"
                tools:src="@mipmap/ic_founder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/podcaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/kryptonite" />

    </LinearLayout>

    <!--  Category • Duration -->
    <TextView
        android:id="@+id/categoryDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcasterLl"
        tools:text="Category • 4 mins" />

    <!--  Util  -->

    <ImageView
        android:id="@+id/love"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_notfav_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <ImageView
        android:id="@+id/playBtn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_play_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <!--  Description -->
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"
        tools:text="I'm sorry to hear that you've been unwell. Please take all the time you need to rest and recover – your health is the most important thing. I hope you're feeling better soon. \n\nThank you for your understanding during the holiday season. I'm ready to get back to work on our projects as soon as you are. In the meantime, please let me know if there's anything I can do to help or prepare. \n\nWishing you a speedy recovery and a happy holiday season. \n\nBest regards" />
</androidx.constraintlayout.widget.ConstraintLayout>